# gigmole

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  agent_skill_market.md  clawhub.json  package-lock.json  package.json  pnpm-lock.yaml  project.config.yml
.github/workflows/: ci.yml  security-review.yml
docs/plans/: 2026-03-07-aglabor-mvp-implementation.md  2026-03-07-aglabor-system-design.md  2026-03-08-admin-dashboard-design.md  2026-03-08-admin-dashboard-plan.md  2026-03-08-platform-infrastructure-design.md  2026-03-08-platform-infrastructure-plan.md  2026-03-08-user-system-design.md  2026-03-08-user-system-plan.md  2026-03-09-escrow-integration-design.md  2026-03-09-escrow-integration-plan.md  x402-integration-plan.md
drizzle/: 0000_complete_daredevil.sql  0001_low_victor_mancha.sql  0002_sparkling_mindworm.sql  0003_schema_fixes.sql  0005_x402_payment_logs.sql
memory/: LOG.md  PROJECT.md  STATE.md  TASK.md
memory/KNOWLEDGE/: DECISIONS.md  GOTCHAS.md  INDEX.md  admin-dashboard.md  cold-start-scenarios.md  competitor-openant.md  drizzle-tips.md  session-registry.md  solana-escrow.md
plugins/: registry.json
programs/escrow/: Cargo.toml  programs_escrow.ll
programs/escrow/.xray/logs/: log.current
programs/escrow/src/: lib.rs
scripts/: deploy-escrow.sh  e2e-test.sh  seed-cold-start.sh  seed-cold-start.ts  seed-phase2.sh  seed-phase3.sh
skill/: labor.md
skill/gigmole/: SKILL.md  examples.md  gigmole-api.md
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: bid-list.tsx  footer.tsx  header.tsx  hero.tsx  (+10 more)
(+159 files in other folders)
