[package]
name = "escrow"
version = "0.1.0"
description = "AgLabor Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cgs = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
